--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
 	"autoload": {
 	    "psr-0" : {
-		   "Pagerange\\5bx" : "src"
+		   "Pagerange\\Bx" : "src"
 		}
     },
     "require": {}
