Update to make Composer 2.0 compatible

--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         }
     ],
 	"autoload": {
-	    "psr-0" : {
-		   "Pagerange\\Bx" : "src"
+	    "psr-4" : {
+		   "Pagerange\\Bx" : "src/"
 		}
     },
     "require": {}
